More quotes from A History Of Western Philosophy

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -229,6 +229,12 @@ http://www.artima.com/intv/tracer.html
 
 <hr>
 
+<p>It should be noted that no ethically-trained software engineer would ever consent to write a DestroyBaghdad procedure. Basic professional ethics would instead require him to write a DestroyCity procedure, to which Baghdad could be given as a parameter.</p>
+<a href="https://www.reddit.com/r/programming/comments/5d56fo/the_code_im_still_ashamed_of/">
+https://www.reddit.com/r/programming/comments/5d56fo/the_code_im_still_ashamed_of/
+</a>
+<p>Nathaniel S. Borenstein</p>
+
 <h1 id="authors">Authors</h1>
 
 <h2>My Life On The Road - Gloria Steinem</h2>
@@ -381,6 +387,118 @@ http://www.artima.com/intv/tracer.html
 
 <p>[Epicurus] is thus led, in practice, to regarding absence of pain, rather than presence of pleasure, as the wise man's goal.</p>
 <p>p235</p>
+
+<hr>
+
+<p>To the end Rome was culturally parasitic on Greece. The Romans invented no art forms, constructed no original system of philosophy, and made no scientific discoveries. They made good roads, systematic legal codes, and efficient armies; for the rest they looked to Greece.</p>
+<p>p268</p>
+
+<hr>
+
+<p>Aristotle's reputation is mainly due to them [the Arabs of the seventh century]; in antiquity, he was seldom mentioned, and was not regarded as on a level with Plato.</p>
+<p>p273</p>
+
+<hr>
+
+<p>It is strange that the last men of intellectual eminence before the dark ages [the Catholics] were concerned, not with saving civilization or expelling the barbarians or reforming the abuses of the administration, but with preaching the merit of virginity and the damnation of unbaptized infants.</p>
+<p>p348</p>
+
+<hr>
+
+<p>The year 1000 may be conveniently taken as marking the end of the lowest depth to which the civilization of Western Europe sank. From this point the upward movement began which continued until 1914.</p>
+<p>p378</p>
+
+<hr>
+
+<p>Our use of the phrase the "Dark Ages" to cover the period from 600 to 1000 marks our undue concentration on Western Europe. In China, this period includes the time of the Tang dynasty, the greatest age of Chinese poetry, and in many other ways a most remarkable epoch. From India to Spain, the brilliant civilization of Islam flourished. No one could have guessed that Western Europe would later become dominant, both in power and in culture.</p>
+<p>p379</p>
+
+<hr>
+
+<p>I think that, if we are to feel at home in the world after the present war [WWII], we shall have to admit Asia to equality in our thoughts, not only politically, but culturally. What changes this will bring about, I do not know, but I am convinced that they will be profound and of the greatest importance.</p>
+<p>p379</p>
+
+<hr>
+
+<p>a plant is like God in being alive, but unlike in not having knowledge; an animal is like God in having knowledge, but unlike in not having intellect. It is always by a negation that a creature differs from God.</p>
+<p>p428</p>
+<p>This quote reminds me of why I prefer to 'remove badness only by adding goodness', eg don't remove some bad thing from the world, replace the bad thing by a better alternative. We are best able to improve the situation of ourselves and others by exploring new ways, not by reverting to a previous state.</p>
+
+<hr>
+
+<p>The finding of arguments for a conclusion given in advance [as done by Saint Thomas Aquinas] is not philosophy, but special pleading.</p>
+<p>p434</p>
+
+<hr>
+
+<p>We must, he [Matthew of Aquasparta] says, find a middle way between Plato and Aristotle. Plato's ideas are "utterly erroneous"; they establish wisdom, but not knowledge. On the other hand, Aristotle is also wrong; he establishes knowledge, but not wisdom.</p>
+<p>p437</p>
+
+<hr>
+
+<p>By nsisting on the possibility of studying logic and human knowledge without reference to metaphysics and theology, Occam's work encouraged scientific research.</p>
+<p>p444</p>
+
+<hr>
+
+<p>Locke, whose <i>temperament</i> is thoroughly objective, is forced reluctantly into the subjective doctrine that knowledge is the agreement or disagreement of ideas</p>
+<p>p460</p>
+
+<hr>
+
+<p>it is not <i>what</i> the man of science believes that distinguishes him [from theological philosophers], but how and <i>why</i> he believes it.</p>
+<p>p490</p>
+
+<hr>
+
+<p>As a rule, the framing of hypotheses is the most difficult part of scientific work, and the part where great ability is indispensable.</p>
+<p>p506</p>
+
+<hr>
+
+<p>The covenant [as described by Hobbes in Leviathan] is not between the citizens and the ruling power; it is a covenant made by the citizens with each other to obey such ruling power as the majority shall choose.</p>
+<p>p512</p>
+
+<hr>
+
+<p>There is in Descartes an unresolved dualism between what he learnt from contemporary science and the scholasticism that he had been taught at La Flèche. This led him into inconsistencies, but it also made him more rich in fruitful ideas than any completely logical philosopher could have been. Consistency might have made him merely the founder of a new scholasticism, whereas inconsistency made him the source of two important but divergent schools of philosophy.</p>
+<p>p529</p>
+
+<hr>
+
+<p>The God of the Old Testament is a God of power, the God of the New Testament is also a God of love; but the God of the theologians, from Aristotle to Calvin, is one whose appeal is intellectual: His existence solves certain puzzles which otherwise would create argumentative difficulties in the understanding of the universe. This Deity who appears at the end of a piece of reasoning, like the proof of a proposition in geometry, did not satisfy Rousseau, who reverted to a conception of God more akin to that of the Gospels.</p>
+<p>p544</p>
+
+<hr>
+
+<p>As a rule, the man who first thinks of a new idea is so much ahead of his time that every one thinks him silly, so that he remains obscure and is soon forgotten.</p>
+<p>p578</p>
+
+<hr>
+
+<p>The nearest thing to a definition of the state of nature to be found in Locke is the following: "Men living together according to reason, without a common superior on earth, with authority to judge between them, is properly the state of nature." This is not a description of the life of savages but of an imagined community of virtuous anarchists, who need no police or law-courts because they always obey "reason", which is the same as "natural law"</p>
+<p>p579</p>
+
+<hr>
+
+<p>The men who did most to promote human happiness were - as might have been expected - those who thought happiness important, not those who despised it in comparison with something more 'sublime'.</p>
+<p>p596</p>
+
+<hr>
+
+<p>Locke, as we saw, is tentative in his beliefs, not at all authoritarian, and willing to leave every question to be decided by free discussion. The result, both in his case and in that of his followers, was a belief in reform, but of a gradual sort.</p>
+<p>p596</p>
+
+<p>Sounds to me a bit like git - 'of a gradual sort'</p>
+
+<hr>
+
+<p>The great political defect of Locke and his disciples, from a modern point of view, was their worship of property.</p>
+<p>p596</p>
+
+<hr>
+
+
 
     </body>
 </html>
