Books have id to facilitate linking by url hash

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -237,12 +237,12 @@ https://www.reddit.com/r/programming/comments/5d56fo/the_code_im_still_ashamed_o
 
 <h1 id="authors">Authors</h1>
 
-<h2>My Life On The Road - Gloria Steinem</h2>
+<h2 id="my-life-on-the-road">My Life On The Road - Gloria Steinem</h2>
 <p>decisions are best made by the people affected by them.</p>
 
 <hr>
 
-<h2>How Much Is Enough - Robert Skidelsky and Edward Skidelsky</h2>
+<h2 id="how-much-is-enough">How Much Is Enough - Robert Skidelsky and Edward Skidelsky</h2>
 <h3>Not quotes, these are my notes.</h3>
 <p>Euzen - an ancient Greek expression. Aristoteles explained the meaning of Euzen to be the path to the good life and that the good life is to fulfil your true nature. It is the only thing of which it makes no sense to ask "What is it for?"</p>
 
@@ -252,7 +252,7 @@ https://www.reddit.com/r/programming/comments/5d56fo/the_code_im_still_ashamed_o
 
 <hr>
 
-<h2>Capital in the Twenty-First Century - Thomas Piketty</h2>
+<h2 id="capital-in-the-twenty-first-century">Capital in the Twenty-First Century - Thomas Piketty</h2>
 <h3>My notes included after page references.</h3>
 
 <p>Inequality is not necessarily bad in itself: the key question is to decide whether it is justified, whether there are reasons for it</p>
@@ -343,7 +343,7 @@ https://www.reddit.com/r/programming/comments/5d56fo/the_code_im_still_ashamed_o
 
 <hr>
 
-<h2>A History of Western Philosophy - Bertrand Russell</h2>
+<h2 id="a-history-of-western-philosophy">A History of Western Philosophy - Bertrand Russell</h2>
 
 <p>The civilized man is distinguished from savage man by prudence, or, to use a slightly wider term, forethought. He is willing to ensure present pains for the sake of future pleasures, even if the future pleasures are rather distant.</p>
 <p>p33</p>
