Typos and additional context to /quotes/

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -436,7 +436,7 @@ https://www.reddit.com/r/programming/comments/5d56fo/the_code_im_still_ashamed_o
 
 <hr>
 
-<p>By nsisting on the possibility of studying logic and human knowledge without reference to metaphysics and theology, Occam's work encouraged scientific research.</p>
+<p>By insisting on the possibility of studying logic and human knowledge without reference to metaphysics and theology, Occam's work encouraged scientific research.</p>
 <p>p444</p>
 
 <hr>
@@ -456,7 +456,7 @@ https://www.reddit.com/r/programming/comments/5d56fo/the_code_im_still_ashamed_o
 
 <hr>
 
-<p>The covenant [as described by Hobbes in Leviathan] is not between the citizens and the ruling power; it is a covenant made by the citizens with each other to obey such ruling power as the majority shall choose.</p>
+<p>The covenant [of government, as described by Hobbes in Leviathan] is not between the citizens and the ruling power; it is a covenant made by the citizens with each other to obey such ruling power as the majority shall choose.</p>
 <p>p512</p>
 
 <hr>
