--- a/bip39/index.html
+++ b/bip39/index.html
@@ -320,7 +320,7 @@
                                     <label class="col-sm-2 control-label">
                                     </label>
                                     <div class="col-sm-10">
-                                        <p data-translate>The account extendend keys can be used for importing to most BIP44 compatible wallets, such as mycelium or electrum.</p>
+                                        <p data-translate>The account extended keys can be used for importing to most BIP44 compatible wallets, such as mycelium or electrum.</p>
                                     </div>
                                 </div>
                                 <div class="form-group">
