--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <p>Explain Like I'm Five Tool</p>
+                <a href="/eli5/">ELI5</a>
+            </li>
         </ul>
     </body>
 </html>
